--- a/src/app/modules/bank-reports/bank-reports.component.html
+++ b/src/app/modules/bank-reports/bank-reports.component.html
@@ -23,9 +23,12 @@
                         <td>{{ return?.endDate }}</td>
                         <td>
                             {{ return?.status.name }}
-                            <input *ngIf="(return?.status?.name === 'No Data') && !files[0]" type="file"
-                                (change)="onFileChange($event, 0)" class="form-control-file"
-                                id="exampleFormControlFile1">
+                            <div class="row">
+                                <span *ngIf="(return?.status?.name !== 'No Data')"
+                                    class="col-2 font-weight-bold">Resubmit: </span>
+                                <input *ngIf="!files[0]" type="file" (change)="onFileChange($event, 0)"
+                                    class="form-control-file col" id="exampleFormControlFile1">
+                            </div>
                         </td>
                         <td>{{ return?.status.name !== 'No Data' 
                                 ? return?.revisions[0]?.hasErrors
@@ -39,32 +42,32 @@
                         </td>
                     </tr>
                     <tr bgcolor="#F6DDCC">
-                            <th scope="row">Q1 - 2019</th>
-                            <td>31/01/2019</td>
-                            <td>28/02/2019</td>
-                            <td>Submitted - Pending Approval</td>
-                            <td></td>
+                        <th scope="row">Q1 - 2019</th>
+                        <td>31/01/2019</td>
+                        <td>28/02/2019</td>
+                        <td>Submitted - Pending Approval</td>
+                        <td></td>
                     </tr>
                     <tr bgcolor="#FD9D89">
-                            <th scope="row">Q2 - 2019</th>
-                            <td>30/05/2019</td>
-                            <td>31/06/2019</td>
-                            <td>Completed - With Errors</td>
-                            <td>Yes</td>
+                        <th scope="row">Q2 - 2019</th>
+                        <td>30/05/2019</td>
+                        <td>31/06/2019</td>
+                        <td>Completed - With Errors</td>
+                        <td>Yes</td>
                     </tr>
                     <tr bgcolor="#F1948A">
-                            <th scope="row">Q3 - 2019</th>
-                            <td>30/08/2019</td>
-                            <td>31/09/2019</td>
-                            <td>Not Submitted</td>
-                            <td></td>
+                        <th scope="row">Q3 - 2019</th>
+                        <td>30/08/2019</td>
+                        <td>31/09/2019</td>
+                        <td>Not Submitted</td>
+                        <td></td>
                     </tr>
                     <tr bgcolor="#F1948A">
-                            <th scope="row">Q4 - 2019</th>
-                            <td>30/11/2019</td>
-                            <td>31/12/2019</td>
-                            <td>Not Submitted</td>
-                            <td></td>
+                        <th scope="row">Q4 - 2019</th>
+                        <td>30/11/2019</td>
+                        <td>31/12/2019</td>
+                        <td>Not Submitted</td>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
